# cer-viewer

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.en.md  README.md  plan.md
.cargo/: config.toml
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  release.yml
assets/: baidu.com.pem  downloaded_real.csr  test.csr  test_ec.csr  test_with_exts.csr
benches/: parsing.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: asn1_parsing.rs  certificate_parsing.rs  crl_parsing.rs
src/: cert.rs  cli.rs  config.rs  document.rs  lib.rs  main.rs  theme.rs  ui.rs
src/cert/: chain.rs  chain_cache.rs  error.rs  extensions.rs  format.rs
src/export/: mod.rs
src/formats/: asn1.rs  cms.rs  csr.rs  keys.rs  mod.rs  pkcs12.rs  x509.rs
src/generation/: csr_gen.rs  mod.rs  self_signed.rs
src/security/: mod.rs  protected.rs  sensitive.rs
src/ui/: app.rs  chain_view.rs  details_view.rs  diff_view.rs  empty_state.rs  field_tree.rs  generate_dialog.rs  mod.rs  password_dialog.rs  tab_bar.rs  toolbar.rs
src/utils/: base64.rs  mod.rs  oid.rs  time.rs
src/validation/: chain.rs  crl.rs  mod.rs  ocsp.rs  report.rs  revocation.rs  verifier.rs
tests/: cli_tests.rs  fixture_tests.rs  integration_tests.rs
tests/fixtures/: README.md  generate_fixtures.py
tests/fixtures/certificates/expired/: expired cert.crt
tests/fixtures/certificates/valid/: chain.pem  ec cert-ec.crt  ec p-384-ec.crt  example.com.crt  intermediate ca.crt  intermediate ca.srl  root ca.crt  self-signed cert.crt  subdomain.example.com.crt  test.org.crt  wildcard ca.crt  wildcard ca.srl  wildcard.example.com.crt
tests/fixtures/csr/: *.example.com.csr  example.com.csr  subdomain.example.com.csr  test.org.csr
tests/fixtures/keys/ec/: ec cert-ec.key  ec p-384-ec.key
tests/fixtures/keys/rsa/: example.com.key  expired cert.key  intermediate ca.key  root ca.key  self-signed cert.key  subdomain.example.com.key  test.org.key  wildcard ca.key  wildcard.example.com.key
tests/fixtures/pkcs12/: example-nopass.p12  example.p12
