[package]
name = "cer-viewer"
version = "0.1.0"
edition = "2021"
authors = ["cer-viewer contributors"]
description = "A modern X.509 certificate viewer built with egui/eframe"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/cer-viewer"
rust-version = "1.80"

[lib]
name = "cer_viewer"
path = "src/lib.rs"

[[bin]]
name = "cer-viewer"
path = "src/main.rs"

[dependencies]
# UI framework
eframe = "0.33.3"
egui = "0.33.3"

# Certificate parsing
x509-parser = "0.18.1"
pem = "3.0.6"

# ASN.1 and DER parsing
der = { version = "0.8", features = ["alloc", "oid"] }
pkcs12 = { version = "0.2.0-pre.0" }
# Note: cms is pre-release, will add when needed
# cms = "0.3.0-pre.2"

# Private key support
sec1 = "0.8"
spki = { version = "0.8.0-rc.4" }
pkcs8 = { version = "0.11.0-rc.11" }
# Note: rsa is pre-release
# rsa = "0.10"

# HTTP client for OCSP/CRL
reqwest = { version = "0.12", features = ["blocking"], optional = true }
tokio = { version = "1.35", features = ["rt"], optional = true }
url = "2.5"

# Logging and tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "std"] }

# Utilities
hex = "0.4.3"
chrono = "0.4.44"
rfd = "0.17.2"
oid-registry = { version = "0.8.1", features = ["crypto", "x509", "x962"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
arboard = "3.4.1"
thiserror = "2.0"
base64 = "0.22"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Security - sensitive data protection
zeroize = "1.8"
secrecy = { version = "0.10", features = ["serde"] }

# Serialization (for future features)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
network = ["reqwest", "tokio"]

[dev-dependencies]

# Release profile optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Profile for development builds with some optimizations
[profile.dev-opt]
inherits = "dev"
opt-level = 1

# Profile for small binary size
[profile.release-small]
inherits = "release"
opt-level = "s"
lto = "fat"
strip = true
