[package]
name = "cer-viewer"
version = "0.1.0"
edition = "2021"
authors = ["cer-viewer contributors"]
description = "A modern X.509 certificate viewer built with egui/eframe"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/cer-viewer"
rust-version = "1.80"

[lib]
name = "cer_viewer"
path = "src/lib.rs"

[[bin]]
name = "cer-viewer"
path = "src/main.rs"

[dependencies]
# UI framework
eframe = "0.33.3"
egui = "0.33.3"

# Certificate parsing
x509-parser = { version = "0.18.1", features = ["verify"] }
pem = "3.0.6"

# ASN.1 and DER parsing
der = { version = "0.8", features = ["alloc", "oid"] }
# NOTE: pkcs12 is pre-release (0.2.0-pre.0) - required for PKCS#12 and CMS parsing
# These crates are from RustCrypto project and are actively developed.
# Update to stable versions when available.
pkcs12 = { version = "0.2.0-pre.0", optional = true }

# Private key support
# NOTE: spki and pkcs8 are release candidates - update to stable when available
sec1 = { version = "0.8", optional = true }
spki = { version = "0.8.0-rc.4", optional = true }
pkcs8 = { version = "0.11.0-rc.11", optional = true }
# Note: rsa is pre-release
# rsa = "0.10"

# HTTP client for OCSP/CRL
reqwest = { version = "0.12", features = ["blocking"], optional = true }
tokio = { version = "1.35", features = ["rt"], optional = true }
url = "2.5"

# Logging and tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "std"] }

# Utilities
hex = "0.4.3"
chrono = "0.4.44"
rfd = "0.17.2"
oid-registry = { version = "0.8.1", features = ["crypto", "x509", "x962"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
arboard = "3.4.1"
thiserror = "2.0"
base64 = "0.22"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Security - sensitive data protection
zeroize = "1.8"
secrecy = { version = "0.10", features = ["serde"] }

# Serialization (for future features)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["pkcs12", "private-keys", "network"]
# Enable network operations (OCSP/CRL)
network = ["reqwest", "tokio"]
# Enable PKCS#12 and CMS (PKCS#7) parsing
pkcs12 = ["dep:pkcs12"]
# Enable private key parsing support
private-keys = ["dep:sec1", "dep:spki", "dep:pkcs8"]
# Full format support (enables all optional features)
full-formats = ["pkcs12", "private-keys"]

[dev-dependencies]

# Release profile optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Profile for development builds with some optimizations
[profile.dev-opt]
inherits = "dev"
opt-level = 1

# Profile for small binary size
[profile.release-small]
inherits = "release"
opt-level = "s"
lto = "fat"
strip = true
